[package]
name = "client"
version = "0.1.0"
authors = ["ibednyakov <ivan.bednyakov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version="0.4.0",features = ["tls", "transport"]}
tokio = {version="1.2.0",features = ["full"]}
prost = "0.7.0"
tokio-stream = "0.1.3"
tokio-channel = "0.1.0"
futures = "0.3.12"
common = {version="0.1", path="../common"}
futures-util = "0.3.13"

[build-dependencies]
tonic-build = "0.4.0"


[[bin]]
name = "client"
path = "src/main.rs"
